  [#19]

- [feature] The naming of revision files can
  now be customized to be some combination
  of "rev id" and "slug", the latter of which
  is based on the revision message.
  By default, the pattern "<rev>_<slug>"
  is used for new files.   New script files
  should include the "revision" variable
  for this to work, which is part of 
  the newer script.py.mako scripts.
  [#24]

0.1.2
=====
- [bug] fix the config.main() function to honor
  the arguments passed, remove no longer used
  "scripts/alembic" as setuptools creates this
  for us.  [#22]

- [bug] Fixed alteration of column type on 
  MSSQL to not include the keyword "TYPE".

- [feature] Can create alembic.config.Config
  with no filename, use set_main_option()
  to add values.  Also added set_section_option()
  which will add sections.  [#23]

0.1.1
=====
- [bug] Clean up file write operations so that
  file handles are closed.

- [feature] PyPy is supported.

- [feature] Python 2.5 is supported, needs 
  __future__.with_statement

- [bug] Fix autogenerate so that "pass" is 
  generated between the two comments
  if no net migrations were present.

- [bug] Fix autogenerate bug that prevented
  correct reflection of a foreign-key
  referenced table in the list of "to remove".
  [#16]

- [bug] Fix bug where create_table() didn't
  handle self-referential foreign key
  correctly [#17]

- [bug] Default prefix for autogenerate
  directives is "op.", matching the 
  mako templates. [#18]

- [feature] Add alembic_module_prefix argument
  to configure() to complement 
  sqlalchemy_module_prefix. [#18]

- [bug] fix quotes not being rendered in
  ForeignKeConstraint during 
  autogenerate [#14]

0.1.0
=====
- Initial release.  Status of features:

- Alembic is used in at least one production 
  environment, but should still be considered 
  ALPHA LEVEL SOFTWARE as of this release,
  particularly in that many features are expected
  to be missing / unimplemented.   Major API